<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.UploadFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgStory"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/gambar"
            app:srcCompat="@drawable/insert_photo_ic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#7289DA"
            android:text="@string/camera"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/btnGallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgStory" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#7289DA"
            android:text="@string/gallery"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCamera"
            app:layout_constraintTop_toBottomOf="@id/imgStory" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:hint="@string/description"
            app:boxStrokeColor="#7289DA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCamera">

            <EditText
                android:id="@+id/ed_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:inputType="textMultiLine"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#7289DA"
            android:text="@string/upload"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutUpload" />

        <ProgressBar
            android:id="@+id/pbUpload"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.667" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>